2005-07-19 13:40 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) add option to -le to control radial spacing.

2005-07-18 16:34 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth) used plan to smooth nodes of bad cells
	first, to try and get better meshes.

2005-07-18 15:30 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwap) used plan to swap really bad cells
	first, to try and get better meshes.

2005-07-18 13:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridConnValue,gridSetConnValue) removed.
	* src/grid.c (gridSortConnValues,gridConnWithThisRanking) removed.

2005-07-18 13:47 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptBasedOnConnRankings) replaced grid
	Conn Value logic with a reuse of plan, so that it can removed
	from grid.

2005-07-18 13:32 Mike Park  <mike.park@nasa.gov>

	* src/plan.c (planriorityWithThisRanking) added to complement
	planItemWithThisRanking

2005-07-18 12:58 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSetConnValuesWithMetricErrorMagnatude) removed.
	* src/gridinsert.c (gridAdaptBasedOnConnRankings) the removed method
	gridSetConnValuesWithMetricErrorMagnatude has been inlined.

2005-07-18 08:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptBasedOnConnRankings) move the conn setup
	and teardown methods into this function
	* src/unit_main.c (main) simplfiy for new gridAdaptBasedOnConnRankings.
	* src/unit_main.c (main) keep going if bad params

2005-07-14 16:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotGeomFaceUV) write face UV params.
	* src/unit_main.c (main) call gridWriteTecplotGeomFaceUV if bad params.

2005-07-14 14:16 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridRightHandedBoundaryUV) added to test UV params.
	* src/unit_main.c (main) test gridRightHandedBoundaryUV, commented 
	gridRobustProject.

2005-07-14 09:38 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridUntangleBadFaceParameters) band-aid to fix