@@ -18,7 +18,11 @@
 BEGIN_C_DECLORATION
 Grid *gridThrash(Grid *g );
 Grid *gridRemoveAllNodes(Grid *g );
+
 Grid *gridAdapt(Grid *g, double minLength, double maxLength );
+Grid *gridAdaptBasedOnConnRankings(Grid *g );
+Grid *gridAdaptLongShort(Grid *g, double minLength, double maxLength );
+
 int gridSplitEdge(Grid *g, int n0, int n1 );
 int gridSplitEdgeRatio(Grid *g, Queue *q, int n0, int n1, double ratio);
 int gridSplitEdgeIfNear(Grid *g, int n0, int n1, 
